privacyidea/static_new/src/app/components/user/user-details/user-details.component.scss
@use "styles";
@use "table";

.details-container {
  @include styles.main-component-style;
  display: grid;
}

.user-details {
  display: grid;
  grid-template-columns: repeat(3, auto);
  gap: 32px;
  padding: 12px 16px;
  border: 1px solid var(--mat-sys-surface-container-highest);
  border-radius: var(--border-radius);
  background: var(--mat-sys-surface-container-low);
}

.custom-user-details {
  display: grid;
  grid-template-columns: repeat(2, auto);
  gap: 0 16px;
  padding: 12px 16px;
  border: 1px solid var(--mat-sys-surface-container-highest);
  border-radius: var(--border-radius);
  background: var(--mat-sys-surface-container-low);
}

.custom-user-details-column {
  display: grid;
  grid-template-columns: auto 1fr auto;
  gap: 0 16px;
  margin-bottom: auto;

  &:not(:last-of-type) {
    border-right: 1px solid var(--mat-sys-surface-container-highest);
    padding-right: 32px;
  }
}

.user-details-grid,
.user-details-column {
  display: grid;
  grid-template-columns: auto auto;
  gap: 16px;
  padding-right: 16px;
  border: 0;
  margin-bottom: auto;

  &:not(:last-of-type) {
    border-right: 1px solid var(--mat-sys-surface-container-highest);
  }
}

.label {
  font-weight: 600;
  overflow: auto;
  text-overflow: ellipsis;
  display: block;
  margin-block: auto;
  max-width: 240px;
}

.value {
  grid-column: 2;
  overflow: auto;
  text-overflow: ellipsis;
  display: block;
  margin-block: auto;
  max-width: 240px;
}

.return-button {
  width: 24px;
  height: 24px;
  padding-right: 0;
}

@media (max-width: 1240px) {
  .user-details {
    grid-template-columns: repeat(2, auto);
  }
  .custom-user-details {
    grid-template-columns: auto;
  }
  .custom-user-details-column:not(:last-of-type) {
    border-right: 0;
    padding-right: 0;
  }
}

@media (max-width: 1000px) {
  .user-details {
    grid-template-columns: auto;
  }
  .user-details-grid,
  .user-details-column {
    border-right: 0;
    padding-right: 0;
  }
}

.custom-attr-add-row {
  display: flex;
  gap: 12px;
  align-items: center;
  margin: 8px 0 16px;
}

.custom-attr-add-row mat-form-field {
  width: 18rem;
}

.attr-value-cell {
  display: flex;
  align-items: center;
}

.add-attr-row {
  display: flex;
  gap: 12px;
  align-items: center;
  flex-wrap: wrap;
}

.ml-8 {
  margin-left: 8px;
}

.ml-4 {
  margin-left: 4px;
}

.no-indention {
  margin-left: 8px;
  padding-left: 8px;
}

.mt--8 {
  margin-top: -8px;
}

.username-header {
  color: var(--mat-sys-primary);
  margin-right: -8px;
}

